<resources>
    <string name="app_name">Movie App</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_days">Enter Days</string>
    <string name="submit">Submit</string>
    <string name="movies">Movies</string>
    <string name="synopsis">Synopsis</string>
    <string name="trending">Trending</string>
    <string name="na">NA</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal.</string>
</resources>