<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="handler"
            type="com.trending.app.modules.moviedetails.MovieDetailsActivity" />

        <variable
            name="movieItem"
            type="com.trending.app.model.MovieItem" />

        <variable
            name="genreManager"
            type="com.trending.app.utils.GenreManager" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        tools:context=".modules.moviedetails.MovieDetailsActivity">

        <LinearLayout
            android:id="@+id/toolbar"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginStart="@dimen/dp20"
                android:id="@+id/back_button"
                android:onClick="@{() -> handler.onBackPressed()}"
                android:padding="@dimen/dp10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sharp_arrow_back_ios_24"
                android:contentDescription="@string/movies" />

            <TextView
                android:text="@string/movies"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/sp26"
                android:gravity="center"
                android:ellipsize="end"
                android:singleLine="true"
                android:fontFamily="@font/averta" />

            <ImageView
                android:visibility="invisible"
                android:layout_marginEnd="@dimen/dp20"
                android:padding="@dimen/dp10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sharp_arrow_back_ios_24"
                android:contentDescription="@string/movies" />

        </LinearLayout>

        <ImageView
            android:transitionName="poster_image"
            android:layout_marginBottom="@dimen/dp40"
            android:id="@+id/background_image"
            android:layout_below="@id/toolbar"
            android:scaleType="fitXY"
            android:alpha="0.2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp400"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:transitionName="poster_image"
            android:layout_marginBottom="@dimen/dp40"
            android:id="@+id/poster_image"
            android:layout_below="@id/toolbar"
            android:elevation="@dimen/dp10"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginStart="@dimen/dp40"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_image_24"
            android:layout_width="@dimen/dp180"
            android:layout_height="@dimen/dp300"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:id="@+id/movie_details_layout"
            android:layout_toEndOf="@id/poster_image"
            android:layout_below="@id/toolbar"
            android:paddingHorizontal="@dimen/dp20"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginStart="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp30"
                android:textColor="@color/white"
                android:fontFamily="@font/averta"
                android:text="@{movieItem.originalTitle}" />

            <TextView
                android:layout_marginTop="@dimen/dp20"
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp18"
                android:textColor="@color/white"
                android:fontFamily="@font/averta"
                android:text="@{movieItem.releaseDate}" />

            <TextView
                android:layout_marginTop="@dimen/dp20"
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp18"
                android:textColor="@color/white"
                android:fontFamily="@font/averta"
                android:text="@{genreManager.getGenresForMovie(movieItem.genreIds)}" />

        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/dp30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_below="@id/poster_image">

            <TextView
                android:id="@+id/synopsis_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/synopsis"
                android:textColor="@color/black"
                android:fontFamily="@font/averta_bold"
                android:textSize="@dimen/sp30" />

            <TextView
                android:layout_marginTop="@dimen/dp15"
                android:lineSpacingExtra="@dimen/dp5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@{movieItem.overview}"
                android:textColor="@color/black"
                android:fontFamily="@font/averta"
                android:textSize="@dimen/sp20" />
        </LinearLayout>


    </RelativeLayout>
</layout>